# 64_OpenGL

./: .gitattributes  .gitmodules  README.md
ConsoleApplication1/: ConsoleApplication1.sln
ConsoleApplication1/ConsoleApplication1/: Camera.cpp  Camera.h  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  Distribution.cpp  Distribution.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Source.cpp  Texture.cpp  Texture.h  Window.cpp  Window.h  main.cpp  schrodinger.cpp  schrodinger.h
ConsoleApplication1/ConsoleApplication1/Shaders/: shader.frag  shader.vert
EMSim/: .gitignore  CMakeLists.txt  README.md
EMSim/EMSim/: unix_entrypoint.c  win_entrypoint.c
EMSim/EMSim/include/: wms_win32.h
EMSim/EMSim/src/wms/: win32.c  wms_win32.c  wms_x11.c
EMSim/include/: CMakeLists.txt
EMSim/trials/test_opengl_wayland/: main.cpp  wayland-gl.c
EMSim/trials/trial_opengl_win32/: CMakeLists.txt  main.cpp
Vulkan_memo/: Familiy_queues.cpp  vulkan_win32.cpp  vulkan_x11.cpp  x11_win.cpp
Vulkan_memo/vulkan_linux/: Makefile  VulkanTest  setup.sh
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/: LICENSE.txt  README.txt  setup-env.sh  vulkansdk
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/config/: vk_layer_settings.txt
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/SPIRV-Reflect/: spirv_reflect.c  spirv_reflect.h
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/dxc/: WinAdapter.h  config.h  dxcapi.h  dxcerrors.h  dxcisense.h
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/glslang/: build_info.h
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/openxr/: openxr.h  openxr_loader_negotiation.h  openxr_platform.h  openxr_platform_defines.h  openxr_reflection.h  openxr_reflection_parent_structs.h  openxr_reflection_structs.h
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/shaderc/: env.h  shaderc.h  shaderc.hpp  status.h  visibility.h
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/slang/: slang-com-helper.h  slang-com-ptr.h  slang-cpp-host-prelude.h  slang-cpp-prelude.h  slang-cpp-scalar-intrinsics.h  slang-cpp-types-core.h  slang-cpp-types.h  slang-cuda-prelude.h  slang-deprecated.h  slang-gfx.h  slang-hlsl-prelude.h  slang-image-format-defs.h  slang-llvm.h  slang-tag-version.h  slang-torch-prelude.h  slang.h
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/spirv/: spir-v.xml
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/spirv-tools/: libspirv.h  libspirv.hpp  linker.hpp  optimizer.hpp
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/include/spirv_cross/: GLSL.std.450.h  spirv.h  spirv.hpp  spirv_cfg.hpp  (+13 more)
Vulkan_memo/vulkan_linux/vulkansdk-linux-x86_64-1.4.313.0/1.4.313.0/x86_64/lib/: libSPIRV.so.15  libSPIRV.so.15.3.0  libSPVRemapper.so.15  libSPVRemapper.so.15.3.0  libglslang-default-resource-limits.so.15  libglslang-default-resource-limits.so.15.3.0  libglslang.so.15  libglslang.so.15.3.0  libopenxr_loader.so.1  libopenxr_loader.so.1.1.40  libshaderc_shared.so.1  libspirv-cross-c-shared.so.0  libspirv-cross-c-shared.so.0.65.0  libvulkan.so.1  libvulkan.so.1.4.313
Vulkan_memo/vulkan_win/: Makefile
Vulkan_memo/vulkan_win/shaders/: test.cpp
windowing_vulkan/: main.c  main1.c
windowing_vulkan/custom title bar/: custom_title_bar.cpp  custom_title_bar_1.cpp
windowing_vulkan/wayland_ex/: Makefile  README.md  wayland_client  wayland_client.c
windowing_vulkan/win32-window-custom-titlebar/: build.bat
(+349 files in other folders)
